# groth16verify

./: .gitignore  Cargo.toml  README.md  build.bat  build_all.sh
.cargo/: config
benches/: zwaves_jni_benches.rs
javalib/: build.gradle
src/: lib.rs  serialization.rs  verifier.rs
