[package]
name = "zwaves_jni"
version = "0.2.0"
authors = ["Igor Gulamov <igor.gulamov@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
name = "zwaves_jni"

[dependencies]
pairing = {version = "0.15.1", git = "https://github.com/snjax/pairing", branch = "feature/fastsubgroupchecks" }
ff = {version = "0.5.2", features = ["derive"] }
group = "0.2"
num = "0.2"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.11.0"
jni = "0.14.0"
byteorder = "1"

[dev-dependencies]
rand_xorshift = "0.2"
rand_core = "0.5"