[package]
name = "zwaves_jni"
version = "0.2.0"
authors = ["Igor Gulamov <igor.gulamov@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
name = "zwaves_jni"

[[bin]]
name="show_test_vectors"

[dependencies]
pairing = {version = "0.15.1", git = "https://github.com/snjax/pairing", branch = "feature/fastsubgroupchecks", rev = "2b73e0e92fc0a1849df600372aa68a507bfd4562" }
ff = {version = "0.5.2", features = ["derive"] }
group = "0.2"
num = "0.2"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.11.0"
jni = "0.14.0"
byteorder = "1"
rand_xorshift = "0.2"
rand_core = "0.5"

[dev-dependencies]
rand_xorshift = "0.2"
rand_core = "0.5"

[features]
default = []