[package]
name = "zksnarks"
version = "0.2.0"
authors = ["Igor Gulamov <igor.gulamov@gmail.com>"]
edition = "2018"

[dependencies]
pairing = "0.15.1"
ff = {version = "0.5.2", features = ["derive"] }
group = "0.2"
num = "0.2"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.11.0"
byteorder = "1"
rand = "0.7.3"
tiny-keccak = { version = "2.0.1", features = ["sha3","keccak"] }
rand_chacha = "0.2.2"


[features]
default = []